js/js.translator/testData/incremental/invalidation/genericInlineFunctions/lib1/l1.0.kt
inline fun <reified T> foo(x: T) = 123
